# Rag-For-EBM

./: .env  .gitignore  pyproject.toml
data/text_files/: langchain_intro.txt
faiss_db/: index.pkl
notebook/: app.py  document.ipynb
